--- a/authentication-app/client/package.json
+++ b/authentication-app/client/package.json
@@ -6,9 +6,28 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.2",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "react": "^16.13.1",
+    "react-animation-components": "^3.0.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-facebook-login": "^4.1.1",
+    "react-github-login": "^1.0.3",
+    "react-google-login": "^5.1.21",
+    "react-hook-form": "^6.8.2",
+    "react-redux": "^7.2.1",
+    "react-redux-form": "^1.16.14",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "react-transition-group": "^4.4.1",
+    "react-twitter-login": "^1.2.3",
+    "reactstrap": "^8.5.1",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
